--- a/bitnami/postgresql-ha/values.yaml
+++ b/bitnami/postgresql-ha/values.yaml
@@ -406,7 +406,7 @@ pgpool:
   ## LoadBalancer on write actions behavior
   ## one of: [off, transaction, trans_transaction, always]
   ##
-  loadBalancingOnWrite: transaction
+  disableLoadBalancingOnWrite: transaction
 
 ## LDAP parameters
 ##
