--- a/bitnami/postgresql/requirements.yaml
+++ b/bitnami/postgresql/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
   - name: common
     version: 0.x.x
-    repository: file://../common
+    repository: https://charts.bitnami.com/bitnami
